Added JavaFX GUI version with Dark/Light theme