@@ -1,21 +1,21 @@
 <div align="center">
 
-<h1>📝 Text File Manipulator</h1>
+<h1>🖥️ Text File Manipulator — GUI Version</h1>
 
 <p>
-  <strong>A Java-based console application for text file manipulation using custom-built Data Structures.</strong><br/>
-  Built entirely from scratch — no Java Collections Framework used.
+  <strong>JavaFX-based GUI application for text file manipulation using custom-built Data Structures.</strong><br/>
+  Modern Dark/Light theme — run locally or on Replit!
 </p>
 
 <p>
   <img src="https://img.shields.io/badge/Language-Java-orange?style=for-the-badge&logo=java" />
-  <img src="https://img.shields.io/badge/Type-DSA%20Project-blue?style=for-the-badge" />
+  <img src="https://img.shields.io/badge/GUI-JavaFX-blue?style=for-the-badge" />
+  <img src="https://img.shields.io/badge/Theme-Dark%20%2F%20Light-purple?style=for-the-badge" />
+  <img src="https://img.shields.io/badge/Run%20On-Replit-red?style=for-the-badge" />
   <img src="https://img.shields.io/badge/License-MIT-green?style=for-the-badge" />
-  <img src="https://img.shields.io/badge/Status-Completed-brightgreen?style=for-the-badge" />
-  <img src="https://img.shields.io/badge/GUI%20Version-Available-purple?style=for-the-badge" />
 </p>
 
-> 🖥️ **GUI Version available** → [`gui-version`](../../tree/gui-version) branch — Built with JavaFX, Dark/Light theme, run on Replit!
+> 💻 **Console Version available** → [`main`](../../tree/main) branch
 
 </div>
 
@@ -23,212 +23,169 @@
 
 ## 📖 Overview
 
-**Text File Manipulator** is a Data Structures & Algorithms (DSA) project developed in Java. It provides a menu-driven console interface to perform a wide range of operations on `.txt` files — all powered by custom implementations of **Stack** and **Singly LinkedList**, written entirely from scratch without using Java's built-in Collections Framework.
-
-This project demonstrates how fundamental data structures can be applied to solve real-world file manipulation problems. 🗂️
+This is the **GUI version** of the Text File Manipulator project, built using **JavaFX**. It provides a modern, visually appealing interface with all 8 file manipulation operations — powered by the same custom **Stack** and **LinkedList** data structures from the console version, now embedded in a single Java file.
 
 ---
 
-## 🌿 Branches
+## ✨ What's New in GUI Version
 
-| Branch | Description | Run On |
-|--------|-------------|--------|
-| 🖥️ [`main`](../../tree/main) | Console-based version using Scanner & File I/O | 🖤 Terminal / CMD |
-| 🎨 [`gui-version`](../../tree/gui-version) | JavaFX GUI with Dark/Light theme toggle | 🌐 Replit / Local |
-
----
-
-## ✨ Features
-
-| # | Operation | Description | Data Structure Used |
-|---|-----------|-------------|-------------------|
-| 1 | 🚫 **Eliminate Repeated Lines** | Removes all duplicate lines from the file | LinkedList (`contains()`) |
-| 2 | 🔄 **Reverse File Content** | Reverses the order of all lines in the file | Stack (LIFO) |
-| 3 | ➕ **Insert New Line** | Inserts a new line after a target keyword | Stack |
-| 4 | 📋 **Copy Line** | Copies a specific line to a clipboard | Stack (Clipboard) |
-| 5 | 📌 **Paste Line** | Pastes clipboard content at a specified position | Stack + LinkedList |
-| 6 | ✂️ **Cut Line** | Removes a line and stores it in clipboard | Stack (Clipboard) + LinkedList |
-| 7 | 🔤 **Sort File Content** | Sorts lines alphabetically using Bubble Sort | Array + Bubble Sort |
-| 8 | 🔀 **Merge Files** | Appends content of one file into another | LinkedList |
-| 9 | 🚪 **Exit** | Exits the program gracefully | — |
+| Feature | Details |
+|---------|---------|
+| 🎨 **Modern JavaFX UI** | Clean, colorful interface with sidebar navigation |
+| 🌙 **Dark / Light Theme** | Toggle between themes with one click |
+| 📂 **File Chooser** | Browse and open any `.txt` file visually |
+| 📝 **Live Text Area** | File content updates instantly after every operation |
+| 💾 **Save Button** | Save changes directly from the UI |
+| 🎨 **Color-coded Buttons** | Each operation has its own accent color |
+| 📊 **Status Bar** | Real-time colored feedback messages |
+| 🔁 **Clipboard Display** | Shows what is copied/cut in the status bar |
 
 ---
 
-## 📁 Project Structure
+## 🎨 UI Layout
 
 ```
-Text-File-Manipulator/
-│
-├── 🌿 main  ──────────────────────────── Console Version
-│   ├── src/
-│   │   ├── TextFileManipulator.java   # 🚀 Main class — entry point & all operations
-│   │   ├── LinkedList.java            # 🔗 Custom Singly LinkedList implementation
-│   │   └── Stack.java                 # 📚 Custom Stack (array-based) implementation
-│   ├── sample.txt                     # 📄 Sample text file for testing
-│   ├── README.md                      # 📖 Project documentation
-│   ├── .gitignore                     # 🙈 Git ignore rules
-│   └── LICENSE                        # 📜 MIT License
-│
-└── 🌿 gui-version ─────────────────────── JavaFX GUI Version
-    ├── src/
-    │   └── TextFileManipulatorGUI.java  # 🎨 Complete GUI — single file (DSA included)
-    ├── sample.txt                       # 📄 Sample text file for testing
-    ├── .replit                          # ▶️  Replit run configuration
-    ├── README.md                        # 📖 GUI version documentation
-    ├── .gitignore                       # 🙈 Git ignore rules
-    └── LICENSE                          # 📜 MIT License
+┌──────────────────────────────────────────────────────────────┐
+│  📝 Text File Manipulator     [📂 Open File]  [🌙 Dark/Light]│  ← Top Bar
+├───────────────────┬──────────────────────────────────────────┤
+│  OPERATIONS       │  FILE CONTENT                            │
+│                   │                                          │
+│  1. Duplicates    │  Hello World                             │
+│  2. Reverse       │  This is a sample file                   │
+│  3. Insert Line   │  Java is great                           │  ← Live TextArea
+│  4. Copy          │  Data Structures                         │
+│  5. Paste         │  Text File Manipulator                   │
+│  6. Cut           │  Learning is fun                         │
+│  7. Sort          │  ...                                     │
+│  8. Merge         │                                          │
+│                   │                                          │
+│  [💾 Save File]   │                                          │
+├───────────────────┴──────────────────────────────────────────┤
+│  ✅ File opened successfully!                                 │  ← Status Bar
+└──────────────────────────────────────────────────────────────┘
 ```
 
 ---
 
-## 🧱 Data Structures Implemented
+## 🌿 Branch Structure
 
-### 🔷 Stack (Array-Based)
-A custom **Last-In-First-Out (LIFO)** data structure implemented using an array. 📚
+```
+gui-version/
+│
+├── src/
+│   └── TextFileManipulatorGUI.java  # Complete GUI (DSStack + DSLinkedList inside)
+│
+├── sample.txt                       # Sample text file for testing
+├── .replit                          # Replit run configuration
+├── README.md                        # This file
+├── .gitignore                       # Git ignore rules
+└── LICENSE                          # MIT License
+```
 
+---
+
+## 🧱 Data Structures Inside GUI File
+
+### 🔷 DSStack (Array-Based — Auto Growing)
 | Method | Description |
 |--------|-------------|
-| `push(String x)` | ⬆️ Add element to top |
-| `pop()` | ⬇️ Remove and return top element |
-| `peek()` | 👁️ View top element without removing |
-| `peekindex(int index)` | 🔍 Access element at a specific position |
-| `stacksize()` | 📏 Get current number of elements |
-| `isEmpty()` | ❓ Check if stack is empty |
-| `clearstack()` | 🧹 Remove all elements |
-| `display()` | 🖨️ Print all elements |
+| `push(String x)` | Add to top — auto grows if full |
+| `pop()` | Remove and return top |
+| `peek()` | View top without removing |
+| `isEmpty()` | Check if empty |
+| `clearStack()` | Remove all elements |
+| `display()` | Print all elements |
 
-**Used for:** 📋 Clipboard (copy/cut/paste), 🔄 file content reversal, ➕ line insertion
-
----
-
-### 🔗 Singly LinkedList
-A custom **dynamic linear data structure** using Node-based links. 🔗
-
+### 🔷 DSLinkedList (Singly Linked)
 | Method | Description |
 |--------|-------------|
-| `addFirst(String data)` | ⏮️ Insert at head |
-| `addLast(String data)` | ⏭️ Insert at tail |
-| `delFirst()` | ❌ Delete head node |
-| `deletefirstString()` | ✂️ Delete and return head data |
-| `contains(String data)` | 🔎 Search for a value |
-| `isEmpty()` | ❓ Check if list is empty |
-| `Size()` | 📏 Return total node count |
-| `display()` | 🖨️ Print all elements |
-| `reverseAndWriteToFile(String path)` | 🔄 Reverse file using Stack |
-
-**Used for:** 💾 Storing file lines, 🚫 duplicate removal, 🔀 file merging, ✂️📌 paste/cut operations
+| `addFirst(String data)` | Insert at head |
+| `addLast(String data)` | Insert at tail |
+| `deletefirstString()` | Delete and return head |
+| `contains(String data)` | Search for value |
+| `isEmpty()` | Check if empty |
+| `display()` | Print all elements |
 
 ---
 
-## 📚 Topics Covered
+## ⚙️ How to Run
 
-**🗂️ Data Structures:**
-- 🔗 Singly Linked List (insertion, deletion, traversal, searching)
-- 📚 Stack using Array (push, pop, overflow & underflow handling)
-- 🗃️ Array (used in sorting)
+### Option 1 — Run on Replit *(Easiest)*
 
-**⚡ Algorithms:**
-- 🔤 Bubble Sort (on String array using `compareTo()`)
-- 🔎 Linear Search (for duplicate detection via `contains()`)
-- 🔄 LIFO-based reversal
-
-**☕ Java Concepts:**
-- 📂 File I/O — `BufferedReader`, `BufferedWriter`, `FileReader`, `FileWriter`, `RandomAccessFile`
-- 🧩 Object-Oriented Programming — Classes, Objects, Inner Classes (`Node`)
-- 🔁 Recursion — Used in `checkname()` for file validation
-- 🛡️ Exception Handling — `try-catch`, `IOException`, `NoSuchElementException`
-- 🔠 String manipulation — `contains()`, `compareTo()`, `equalsIgnoreCase()`
+1. Go to **https://replit.com**
+2. Click **"Create Repl"** → **"Import from GitHub"**
+3. Paste: `https://github.com/Khansa972/Text-File-Manipulator`
+4. Select branch → **`gui-version`**
+5. Language → **Java**
+6. Click **Import** then ▶️ **Run**
+7. Open **VNC Viewer** tab to see the GUI window
 
 ---
 
-## ⚙️ How to Run — Console Version
+### Option 2 — Run Locally (JDK 8)
 
-### 📋 Prerequisites
-- ☕ Java JDK 8 or above
-- 🖤 Terminal / Command Prompt
-
-### 🪜 Steps
+> JavaFX is built-in with JDK 8 — no extra setup needed!
 
 ```bash
-# Step 1: Clone the repository
+# Step 1: Clone and switch branch
 git clone https://github.com/Khansa972/Text-File-Manipulator.git
-
-# Step 2: Navigate to src folder
-cd Text-File-Manipulator/src
-
-# Step 3: Compile all Java files
-javac Stack.java LinkedList.java TextFileManipulator.java
-
-# Step 4: Run the program
-java TextFileManipulator
-```
-
-### 🧪 Test with Sample File
-
-When the program asks for a file name, enter:
-```
-sample
-```
-
-> ⚠️ Make sure `sample.txt` is in the same folder where you run `java TextFileManipulator`.
-
----
-
-## 🎨 How to Run — GUI Version
-
-> Switch to the [`gui-version`](../../tree/gui-version) branch for full instructions.
-
-```bash
-# Switch to GUI branch
+cd Text-File-Manipulator
 git checkout gui-version
 
-# Navigate to src
+# Step 2: Navigate to src
 cd src
 
-# Compile
+# Step 3: Compile
 javac TextFileManipulatorGUI.java
 
-# Run
+# Step 4: Run
 java TextFileManipulatorGUI
 ```
 
-Or run directly on 🌐 **Replit** — see the `gui-version` branch README for steps.
+---
+
+### Option 3 — Run Locally (JDK 11 or above)
+
+> JavaFX must be downloaded separately from https://openjfx.io
+
+```bash
+# Compile with JavaFX module path
+javac --module-path /path/to/javafx-sdk/lib \
+      --add-modules javafx.controls,javafx.fxml \
+      TextFileManipulatorGUI.java
+
+# Run
+java --module-path /path/to/javafx-sdk/lib \
+     --add-modules javafx.controls,javafx.fxml \
+     TextFileManipulatorGUI
+```
+
+> ⚠️ Replace `/path/to/javafx-sdk/lib` with your actual JavaFX SDK path.
 
 ---
 
-## 🖥️ Program Demo — Console
+## 🖥️ Operations Guide
 
-```
----------------------------------------------------------------------------------
-               T E X T   F I L E   M A N I P U L A T O R
----------------------------------------------------------------------------------
-Enter File Name in which you want changes :
-> sample
-
-Length of File : 120
-
-------------------------------------------------------------------
- PRESS :
-(1). Eliminate repeated Lines from the file
-(2). Reverse the content of file
-(3). Insert new Line
-(4). Copy text
-(5). Paste text Line
-(6). Cut the Line
-(7). Sort the content of the file
-(8). Write one file content to another file
-(9). Exit
-```
+| Button | Color | What It Does |
+|--------|-------|-------------|
+| Eliminate Duplicates | 🩷 Pink | Removes all repeated lines |
+| Reverse Content | 🔵 Blue | Flips order of all lines |
+| Insert New Line | 🟢 Green | Adds line after a keyword |
+| Copy Line | 🟠 Orange | Copies line to clipboard |
+| Paste Line | 🟡 Yellow | Pastes clipboard at position |
+| Cut Line | 🔴 Red | Removes line to clipboard |
+| Sort Content | 🟣 Purple | Sorts lines A→Z |
+| Merge File | 🩵 Teal | Merges another .txt file |
 
 ---
 
 ## 🚀 Possible Improvements
 
-- ✅ **GUI Version** already available → [`gui-version`](../../tree/gui-version) branch
-- ⚡ Replace static array-based Stack with a dynamic/auto-growing implementation
-- 📂 Support for multiple file formats (`.csv`, `.log`, etc.)
-- ↩️ Undo/Redo functionality using Stack history
-- 🧪 Unit testing with JUnit
+- Add line numbers in the text area
+- Support `.csv` and `.log` file formats
+- Undo/Redo functionality using Stack history
+- Find & Replace feature
+- Unit testing with JUnit
 
 ---
 
